fixed inputs getting wrong width

--- a/resources/assets/sass/_forms.scss
+++ b/resources/assets/sass/_forms.scss
@@ -1,6 +1,4 @@
-
-
-input {
+.contact-form {
   width: 40%;
   outline: 0;
   border-width: 0 0 2px 0;
@@ -9,11 +7,16 @@ input {
     -webkit-transition: .4s ease;
     transition: 0.4s ease;
 }
-input:focus {
+
+.contact-form:focus {
   width: 70%;
   -moz-transition: .4s ease;
   -o-transition: .4s ease;
   -webkit-transition: .4s ease;
   transition: 0.4s ease;
   border-color: $zv-blue;
+}
+
+.contact-form::-webkit-input-placeholder{
+  color: #9a9d9f;
 }
